[gd_scene load_steps=2 format=3 uid="uid://bl4byvw0gaprk"]

[ext_resource type="Script" path="res://pond/pond.gd" id="1_xcugs"]

[node name="Pond" type="Area2D" groups=["pond"]]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 12
script = ExtResource("1_xcugs")

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(328.661, -411.851, 316.188, -416.008, 297.479, -409.772, 285.007, -418.087, 274.613, -432.638, 264.22, -430.559, 245.511, -422.244, 235.117, -428.48, 216.409, -434.717, 197.7, -428.48, 183.149, -432.638, 174.834, -428.48, 156.125, -420.165, 137.416, -416.008, 110.393, -413.929, 93.7628, -413.929, 85.4479, -411.851, 81.2904, -397.299, 68.818, -388.984, 54.2668, -393.142, 35.5581, -395.221, 25.1644, -395.221, 14.7708, -380.669, 6.45581, -370.276, 2.29834, -359.882, -10.1742, -351.567, -22.6466, -345.331, -39.2765, -343.252, -51.749, -339.095, -64.2214, -332.858, -76.6938, -324.543, -89.1663, -318.307, -107.875, -309.992, -114.111, -305.835, -122.426, -301.677, -139.056, -301.677, -151.529, -301.677, -157.765, -295.441, -168.158, -287.126, -178.552, -276.732, -195.182, -276.732, -199.339, -272.575, -209.733, -260.102, -213.891, -249.709, -228.442, -243.473, -242.993, -228.921, -255.466, -231, -276.253, -228.921, -276.253, -220.606, -274.174, -203.977, -270.017, -193.583, -288.725, -181.11, -307.434, -170.717, -332.379, -166.559, -342.773, -156.165, -353.166, -137.457, -361.481, -120.827, -380.19, -116.669, -386.426, -106.276, -430.08, -100.039, -440.473, -93.8032, -446.71, -81.3308, -448.788, -68.8583, -461.261, -54.3072, -469.576, -33.5198, -471.655, -21.0473, -475.812, -6.49615, -484.127, 12.2125, -498.678, 20.5275, -513.229, 28.8425, -527.781, 43.3936, -540.253, 53.7874, -546.489, 70.4172, -554.804, 72.496, -556.883, 82.8897, -554.804, 101.598, -554.804, 111.992, -558.962, 134.858, -550.647, 141.094, -554.804, 157.724, -558.962, 174.354, -546.489, 168.118, -534.017, 163.961, -525.702, 174.354, -511.151, 182.669, -504.914, 193.063, -494.521, 203.457, -477.891, 207.614, -469.576, 211.772, -455.025, 220.087, -442.552, 215.929, -419.686, 230.48, -407.214, 230.48, -369.796, 238.795, -359.403, 232.559, -342.773, 230.48, -319.906, 234.638, -276.253, 272.055, -245.072, 261.661, -201.418, 259.583, -168.158, 259.583, -141.135, 257.504, -130.741, 236.716, -95.4025, 220.087, -78.7726, 251.268, -45.5127, 247.11, -10.1742, 251.268, 56.3456, 209.693, 79.2117, 205.535, 110.393, 193.063, 158.204, 186.827, 185.227, 166.039, 228.881, 157.724, 253.826, 172.276, 272.535, 211.772, 314.109, 215.929, 332.818, 193.063, 318.267, 126.543, 330.739, 109.913, 355.684, 55.8661, 357.763, 30.9212, 345.29, -8.57489, 343.212, -56.3859, 368.157, -75.0946, 407.653, -89.6458, 415.968, -110.433, 395.18, -135.378, 424.283, -158.244, 415.968, -191.504, 418.046, -220.606, 415.968, -258.024, 386.865, -309.992, 384.786, -337.016, 374.393, -351.567, 368.157, -366.118, 349.448, -380.669, 336.975, -397.299)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.482155, 0.560815, 0.678553, 1)
polygon = PackedVector2Array(328.661, -411.851, 316.188, -416.008, 297.479, -409.772, 285.007, -418.087, 274.613, -432.638, 264.22, -430.559, 245.511, -422.244, 235.117, -428.48, 216.409, -434.717, 197.7, -428.48, 183.149, -432.638, 174.834, -428.48, 156.125, -420.165, 137.416, -416.008, 110.393, -413.929, 93.7628, -413.929, 85.4479, -411.851, 81.2904, -397.299, 68.818, -388.984, 54.2668, -393.142, 35.5581, -395.221, 25.1644, -395.221, 14.7708, -380.669, 6.45581, -370.276, 2.29834, -359.882, -10.1742, -351.567, -22.6466, -345.331, -39.2765, -343.252, -51.749, -339.095, -64.2214, -332.858, -76.6938, -324.543, -89.1663, -318.307, -107.875, -309.992, -114.111, -305.835, -122.426, -301.677, -139.056, -301.677, -151.529, -301.677, -157.765, -295.441, -168.158, -287.126, -178.552, -276.732, -195.182, -276.732, -199.339, -272.575, -209.733, -260.102, -213.891, -249.709, -228.442, -243.473, -242.993, -228.921, -255.466, -231, -276.253, -228.921, -276.253, -220.606, -274.174, -203.977, -270.017, -193.583, -288.725, -181.11, -307.434, -170.717, -332.379, -166.559, -342.773, -156.165, -353.166, -137.457, -361.481, -120.827, -380.19, -116.669, -386.426, -106.276, -430.08, -100.039, -440.473, -93.8032, -446.71, -81.3308, -448.788, -68.8583, -461.261, -54.3072, -469.576, -33.5198, -471.655, -21.0473, -475.812, -6.49615, -484.127, 12.2125, -498.678, 20.5275, -513.229, 28.8425, -527.781, 43.3936, -540.253, 53.7874, -546.489, 70.4172, -554.804, 72.496, -556.883, 82.8897, -554.804, 101.598, -554.804, 111.992, -558.962, 134.858, -550.647, 141.094, -554.804, 157.724, -558.962, 174.354, -546.489, 168.118, -534.017, 163.961, -525.702, 174.354, -511.151, 182.669, -504.914, 193.063, -494.521, 203.457, -477.891, 207.614, -469.576, 211.772, -455.025, 220.087, -442.552, 215.929, -419.686, 230.48, -407.214, 230.48, -369.796, 238.795, -359.403, 232.559, -342.773, 230.48, -319.906, 234.638, -276.253, 272.055, -245.072, 261.661, -201.418, 259.583, -168.158, 259.583, -141.135, 257.504, -130.741, 236.716, -95.4025, 220.087, -78.7726, 251.268, -45.5127, 247.11, -10.1742, 251.268, 56.3456, 209.693, 79.2117, 205.535, 110.393, 193.063, 158.204, 186.827, 185.227, 166.039, 228.881, 157.724, 253.826, 172.276, 272.535, 211.772, 314.109, 215.929, 332.818, 193.063, 318.267, 126.543, 330.739, 109.913, 355.684, 55.8661, 357.763, 30.9212, 345.29, -8.57489, 343.212, -56.3859, 368.157, -75.0946, 407.653, -89.6458, 415.968, -110.433, 395.18, -135.378, 424.283, -158.244, 415.968, -191.504, 418.046, -220.606, 415.968, -258.024, 386.865, -309.992, 384.786, -337.016, 374.393, -351.567, 368.157, -366.118, 349.448, -380.669, 336.975, -397.299)

[node name="HealthRegenDropTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="HealthRegenDropTimer" to="." method="_on_timer_timeout"]
